# rag_evaluation_dataset

./: .env.example  LICENSE  README.md  pyproject.toml  qa_output.json  run_pipeline.py  tox.ini
.github/workflows/: cd.yml  ci.yml
data/: documents.json
data/input/: documents.json
data/output/: qa_output.json
src/: __init__.py  _version.py  embedding_search.py  entity_search.py  generate_qa_pairs.py  llm_factory.py  pipeline.py
src/prompts/: extract_entities_system.md  generate_qa_pairs_system.md
tests/: test_entity_search.py
utils/: __init__.py  cli.py  entities.py  io.py
