[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag_evaluation_dataset"
version = "0.1.0"
description = "Generate QA pairs from JSON documents to evaluate RAG pipelines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=26.3.1",
    "openai>=1.0.0",
    "tox>=4.52.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
qa-generate = "src.pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["src", "utils"]

[tool.uv]
link-mode = "copy"
