[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag_evaluation_dataset"
version = "0.1.0"
description = "Generate QA pairs from JSON documents to evaluate RAG pipelines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=26.3.1",
    "fsspec>=2023.1.0",
    "loguru>=0.7.0",
    "openai>=1.0.0",
    "python-dotenv==1.2.2",
    "tqdm>=4.0.0",
    "tox>=4.52.1",
]

[project.optional-dependencies]
azure = [
    "adlfs>=2023.1.0",
    "azure-identity>=1.15.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
qa-generate = "src.pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["src", "utils"]

[tool.uv]
link-mode = "copy"
